--- a/Termsandservice.html
+++ b/Termsandservice.html
@@ -47,9 +47,9 @@
     </div>
 </nav>   
 
-<div class="d-none d-lg-block">
+<!-- <div class="d-none d-lg-block">
   <input type="button" class="gobackbutton" value="Go back to registration" onclick="history.back()">
-</div>          
+</div>           -->
 
 
   <p class="classes">
