--- a/classes.html
+++ b/classes.html
@@ -86,7 +86,7 @@
 (كلاس آموزش الفباي فارسي الف) 
 <br><br>
 آدينه ساعت ٤:٣٠-٥:٣٠  پسين
-(كلاس ايرانشناسي به زبان فارسي)
+(كلاس ايانشناسي به زبان فارسي)
 <br><br>
 شنبه ساعت ١١-١٢ بامداد
 (كارگاه گفتگو به زبان فارسي)
