--- a/edclasses.html
+++ b/edclasses.html
@@ -64,6 +64,10 @@
           <img height="250rem" width="250rem" src="Arezu.jpg" alt="">
         </div>
         <br>
+        <h2 style="margin: 1rem;">Farsi class with <span style="color: #00fb0d">Setareh Mandegarian</span></h2>
+        <div style="margin-left: 1.9rem">
+          <img height="250rem" width="250rem" src="Setareh.jpg" alt="">
+        </div>
     </section>
 </body>
 </html>
