--- a/registration.html
+++ b/registration.html
@@ -36,15 +36,9 @@
           </div>
           <div class="checkbox">
             <label>Classes:</label><br><br>
-            <!-- <input type="checkbox" class="checkboxsizing" name="data[1]" value="yes"/><span style="color: red;">Tuesday 4:00PM-4:30 PM</span> (educational workshop for 3-6 years old)<br><br>
-            <input type="checkbox" class="checkboxsizing" name="data[2]" value="yes"/><span style="color: red;">Tuesday 5:00 PM-6:00PM</span> (Persian Alphabet B)<br><br>
-            <input type="checkbox" class="checkboxsizing" name="data[3]" value="yes"/><span style="color: red;">Wednesday 5:00 PM</span> (Paiting class)<br><br>
-            <input type="checkbox" class="checkboxsizing" name="data[4]" value="yes"/><span style="color: red;">Thursday 5:00 PM-6:00PM</span> (Persian Alphabet A)<br><br>
-            <input type="checkbox" class="checkboxsizing" name="data[5]" value="yes"/><span style="color: red;">Friday 4:30 PM- 5:30 PM</span> (Iranology)<br><br>
-            <input type="checkbox" class="checkboxsizing" name="data[6]" value="yes"/><span style="color: red;">Saturday 11:00 AM-12:00 PM</span> (Persian Conversation workshop)<br><br> -->
-            <input type="checkbox" class="checkboxsizing" name="data[Tuesday 4:00PM-4:30 PM (educational workshop)]" value="yes"/><span style="color: red;">Tuesday 4:00PM-4:30 PM </span>(educational workshop for 3-6 years)<br><br>
-            <input type="checkbox" class="checkboxsizing" name="data[Tuesday 5:00 PM-6:00PM (Alphabet B)]" value="yes"/><span style="color: red;">Tuesday 5:00 PM-6:00PM</span> (Persian Alphabet B)<br><br>
-            <input type="checkbox" class="checkboxsizing" name="data[Wednesday 5:00 PM (Painting class)]" value="yes"/><span style="color: red;">Wednesday 5:00 PM</span> (Painting class)<br><br>
+            <input type="checkbox" class="checkboxsizing" name="data[Tuesday 4:00PM-4:30 PM (educational workshop)]" value="waitlist"/><span style="color: red;">Tuesday 4:00PM-4:30 PM </span>(educational workshop for 3-6 years)<span style="color: blue;"> Waitlist</span><br><br>
+            <input type="checkbox" class="checkboxsizing" name="data[Tuesday 5:00 PM-6:00PM (Alphabet B)]" value="waitlist"/><span style="color: red;">Tuesday 5:00 PM-6:00PM</span> (Persian Alphabet B)<span style="color: blue;"> Waitlist</span><br><br>
+            <input type="checkbox" class="checkboxsizing" name="data[Wednesday 5:00 PM (Painting class)]" value="waitlist"/><span style="color: red;">Wednesday 5:00 PM</span> (Painting class)<span style="color: blue;"> Waitlist</span><br><br>
             <input type="checkbox" class="checkboxsizing" name="data[Thursday 5:00 PM-6:00PM (Alphabet A)]" value="yes"/><span style="color: red;">Thursday 5:00 PM-6:00PM</span> (Persian Alphabet A)<br><br>
             <input type="checkbox" class="checkboxsizing" name="data[Friday 4:30 PM- 5:30 PM (Iranology)]" value="yes"/><span style="color: red;">Friday 4:30 PM- 5:30 PM</span> (Iranology)<br><br>
             <input type="checkbox" class="checkboxsizing" name="data[Saturday 11:00 AM-12:00 PM (Persian Conversation)]" value="yes"/><span style="color: red;">Saturday 11:00 AM-12:00 PM</span> (Persian Conversation workshop)<br><br>
