--- a/2020-2021/songs.html
+++ b/2020-2021/songs.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
+
 <head>
   <meta charset="utf-8">
   <title>Farsi Class</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="../css/styles.css">
   <meta name="description" content="free Farsi class ages 8-18">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="photoshopedlogo808.ico">
@@ -15,9 +16,8 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </head>
+<body class="body">
 
-<body style="text-align: left;" class="body">
-    
   <nav class="navbar navbar-expand-lg navbar-light navbar-right navbar-fixed-top" style="background-color: #71c9ce;">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,30 +55,15 @@
         </li>
       </ul>
     </div>
-  </nav>
-      
-    <section style="padding-left: 1rem; margin: 1rem 0;">
-        <h1>Art classes</h1>
-        <br>
-        <br>
-        <h2 style="margin: 1rem;">Painting class</h2>
-        <div style="margin-left: 1.9rem">
-          <h4 style="color: #C400FF;">Goli Dadnam</h4>
-          <img height="275rem" width="225rem" src="Goli.jpg" alt="">
-        </div>
-        <br>
-        <h2 style="margin: 1rem;">Singing class</h2>
-        <div style="margin-left: 1.9rem">
-          <h4 style="color: #0E49B5">Kiyomars Khosraviani</h4>
-          <img height="250rem" width="325rem" src="Mr.Khosraviani.jpg" alt="">
-        </div>
-        <br>
-        <h2 style="margin: 1rem;">Acting class</h2>
-        <div style="margin-left: 1.9rem">
-          <h4 style="color: #AE00FB;">Fariba Sardari</h4>
-          <img height="250rem" width="200rem" src="Fariba S.jpg" alt="">
-        </div>
-        <br>
-    </section>
-</body>
+  </nav> 
+  
+  <h1 style="padding: 1.5% 0 1.5%;">Songs</h1>
+
+  <h2 style="text-align: left; padding-left: 2.5rem;">Songs</h2>
+  <div style="text-align: left; padding-left: 4rem; padding-bottom: 4rem;">
+    <iframe width="400" height="250" src="https://www.youtube.com/embed/tLibJkQTSxA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="400" height="250" src="https://www.youtube.com/embed/urvwFbWYbo4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+
+ </body>
 </html>
