--- a/Termsandservice.html
+++ b/Termsandservice.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <title></title>
   <link rel="stylesheet" href="css/styles.css">
-  <meta name="description" content="free Farsi class ages 8-18">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="photoshopedlogo808.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <meta name="description" content="Class Rules">
   <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/3ab9722e6f.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
