--- a/edclasses.html
+++ b/edclasses.html
@@ -17,33 +17,44 @@
 
 <body style="text-align: left;" class="body">
     
-  <nav class="navbar navbar-expand-lg navbar-light navbar-right" style="background-color: #71c9ce;">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse navbar-left green vn" id="navbarNav">
-        <ul class="navbar-nav">
-        <li class="nav-item active mbtn">
-            <a class="navlink btn btn-outline-primary" href="index.html">Home</a>
-        </li>
-        <li class="nav-item mbtn">
-            <a class="btn navlink btn-outline-primary" href="class_pictures">Class Pictures</a>
-        </li>
-
-        <li class="nav-item mbtn">
-            <div class="dropdown">
-            <button class="btn navlink btn-outline-primary">2020-2021</button>
-            <div class="dropdown-content">
-                <a class="hvr-shrink" href="2020to2021_projects.html">Projects</a>
-                <a class="hvr-shrink" href="2020to2021_songs.html">Songs</a>
-                <a class="hvr-shrink" href="2020to2021_1st_anniv.html">1st year Anniversary</a>
-                <a class="hvr-shrink" href="2020to2021_reviews.html">Reviews</a>
-            </div>
-            </div>
-        </li>
-        </ul>
-    </div>
-</nav>   
+    <nav class="navbar navbar-expand-lg navbar-light navbar-right navbar-fixed-top" style="background-color: #71c9ce;">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse navbar-left vn" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item  mbtn">
+              <a class="navlink btn btn-outline-primary" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item mbtn">
+              <a class="btn navlink btn-outline-primary" href="../class_pictures.html">Class Pictures</a>
+            </li>
+    
+            <li class="nav-item mbtn">
+              <div class="dropdown">
+                <button class="btn navlink btn-outline-primary">2020-2021</button>
+                <div class="dropdown-content">
+                  <a class="hvr-shrink" href="../2020-2021/projects.html">Projects</a>
+                  <a class="hvr-shrink" href="../2020-2021/1st Anniversary.html">1st Anniversary</a>
+                  <a class="hvr-shrink" href="../2020-2021/songs.html">Songs</a>
+                  <a class="hvr-shrink" href="../2020-2021/reviews.html">Reviews</a>
+                </div>
+              </div>
+            </li>
+            <li class="nav-item mbtn">
+              <div class="dropdown">
+                <button class="btn navlink btn-outline-primary">2021-2022</button>
+                <div class="dropdown-content">
+                  <!-- <a class="hvr-shrink" href="2020to2021_projects.html">Projects</a> -->
+                  <a class="hvr-shrink" href="../2021-2022/plays.html">Plays</a>
+                  <!-- <a class="hvr-shrink" href="2020to2021_songs.html">Songs</a> -->
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav> 
   
     <section style="padding-left: 1rem; margin: 1rem 0;">
         <h1>Educational classes</h1>
