--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               <div class="col-md-12">
                 <br>
                 <br>
-                <h2 style="padding-bottom: 5rem;">Recent Projects and Play</h2>
+                <h2 style="padding-bottom: 5rem;">Recent Projects and Plays</h2>
                 <br>
                 <div class="row">
                   <div class="col-md-6">
@@ -197,7 +197,10 @@
 
         <!--  <hr class="borderindex"> -->
         <section class="picture_background">
+          <br>
           <h2>Recent Student Graduation</h2>
+          <br>
+          <br>
           <div id="fall2022" class="carousel slide jk" data-ride="carousel" data-interval="3000" data-pause="hover"
             data-touch="true" data-keyboard="true">
             <div class="carousel-inner">
