--- a/index.html
+++ b/index.html
@@ -359,6 +359,8 @@
                 <br>
                 <div class="row">
                   <div class="col-md-6">
+                    <br>
+                    <br>
                     <h3>Namayesheh Hasany</h3>
                     <iframe width="350" height="200" src="https://www.youtube.com/embed/Gjb2WYhR6dk"
                       title="YouTube video player" frameborder="0"
@@ -384,8 +386,8 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12">
-                <h2 style="padding-bottom: 5rem;">Meet our teachers!</h3>
-                  <br>
+                <br>
+                <h2 style="padding-bottom: 4rem;">Meet our teachers!</h3>
                   <br>
                   <div class="row">
                     <div class="col-md-6">
@@ -394,7 +396,9 @@
                       <br>
                       <a href="edclasses.html">Educational Classes</a>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 sefriendly">
+                      <br>
+                      <br>
                       <a href="artclasses.html"><img class="circle" style="width=" 350" height="200"
                           src="artclasseslogo.jpg" alt=""></a>
                       <br>
